fix: legend dark mode hover color (#820)

--- a/packages/osd-charts/src/components/legend/_legend_item.scss
+++ b/packages/osd-charts/src/components/legend/_legend_item.scss
@@ -16,7 +16,7 @@ $legendItemVerticalPadding: $echLegendRowGap / 2;
   }
 
   &:hover {
-    background-color: #e7f0f7;
+    background-color: $euiColorLightestShade;
   }
 
   &__action {
